force-app/main/default/objects/Echeancier__c/Echeancier__c.object-meta.xml
<CustomObject>
    <label>Echéancier</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Nom de Echéancier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Echéanciers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>