force-app/main/default/objects/Echeancier__c/fields/Affectation_UB__c.field-meta.xml
<CustomField>
    <fullName>Affectation_UB__c</fullName>
    <description>Permet d&apos;indiquer sur les opportunités &quot;partenariats fundraising&quot;, les UB ( unités budgétaires) qui reçoivent les fonds versés par les partenaires.</description>
    <label>Affectation UB</label>
    <type>TextArea</type>
</CustomField>