force-app/main/default/objects/Echeancier__c/fields/Date_previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_previsionnelle__c</fullName>
    <label>Exercice (Non utilisé)</label>
    <type>Date</type>
</CustomField>