force-app/main/default/objects/Echeancier__c/fields/Exercice__c.field-meta.xml
<CustomField>
    <fullName>Exercice__c</fullName>
    <label>Exercice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECH-EX200</fullName>
            </value>
            <value>
                <fullName>ECH-EX190</fullName>
            </value>
            <value>
                <fullName>ECH-EX180</fullName>
            </value>
            <value>
                <fullName>ECH-EX170</fullName>
            </value>
            <value>
                <fullName>ECH-EX160</fullName>
            </value>
            <value>
                <fullName>ECH-EX150</fullName>
            </value>
            <value>
                <fullName>ECH-EX140</fullName>
            </value>
            <value>
                <fullName>ECH-EX130</fullName>
            </value>
            <value>
                <fullName>ECH-EX120</fullName>
            </value>
            <value>
                <fullName>ECH-EX110</fullName>
            </value>
            <value>
                <fullName>ECH-EX100</fullName>
            </value>
            <value>
                <fullName>ECH-EX90</fullName>
            </value>
            <value>
                <fullName>ECH-EX80</fullName>
            </value>
            <value>
                <fullName>ECH-EX70</fullName>
            </value>
            <value>
                <fullName>ECH-EX60</fullName>
            </value>
            <value>
                <fullName>ECH-EX50</fullName>
            </value>
            <value>
                <fullName>ECH-EX40</fullName>
            </value>
            <value>
                <fullName>ECH-EX30</fullName>
            </value>
            <value>
                <fullName>ECH-EX20</fullName>
            </value>
            <value>
                <fullName>ECH-EX10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>