force-app/main/default/objects/Echeancier__c/fields/Montant_diff_rentiel_avec_ch_ancier__c.field-meta.xml
<CustomField>
    <fullName>Montant_diff_rentiel_avec_ch_ancier__c</fullName>
    <formula>Opportunite__r.Montant_diff_rentiel_avec_ch_ancier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant différentiel avec échéancier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>