force-app/main/default/objects/Echeancier__c/fields/Montant_Opp__c.field-meta.xml
<CustomField>
    <fullName>Montant_Opp__c</fullName>
    <formula>Opportunite__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant total de l&apos;opportunité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>