force-app/main/default/objects/Echeancier__c/fields/Montant_previsionnel__c.field-meta.xml
<CustomField>
    <fullName>Montant_previsionnel__c</fullName>
    <label>Montant prévisionnel sur l&apos;exercice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>