force-app/main/default/objects/Echeancier__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>TEXT(YEAR(Date_previsionnelle__c))&amp;&quot;_P&quot;&amp;IF ( MONTH(Date_previsionnelle__c) &lt;= 3,&quot;1&quot;,IF ( MONTH(Date_previsionnelle__c) &lt;= 8,&quot;2&quot;,&quot;3&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période</label>
    <type>Text</type>
</CustomField>