force-app/main/default/objects/Echeancier__c/fields/Reprise_Lot_2015__c.field-meta.xml
<CustomField>
    <fullName>Reprise_Lot_2015__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reprise Lot 2015</label>
    <type>Checkbox</type>
</CustomField>