force-app/main/default/objects/Echeancier__c/validationRules/RV_Echeancier01_ExerciceObligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_Echeancier01_ExerciceObligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
( 
ISPICKVAL(  Exercice__c , &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Vous devez saisir un exercice</errorMessage>
</ValidationRule>